# logger

./: .gitignore  Cargo.toml
go/: 1.go  2.go  go.mod  go.sum
keylogger/: Cargo.toml  build.rs  myicon.rc
keylogger/src/: main.rs
mother/: Cargo.toml  build.rs
mother/src/: main.rs  main3.rs  main_old.rs
printer/src/: main.rs
src/: main.rs
