[package]
name = "mother"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"

[build-dependencies]
winres = "0.1"
static_vcruntime = "2.0"


[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
#    "Win32_Security",
#    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
#    "Win32_UI_Input_KeyboardAndMouse",
#    "Win32_UI_TextServices",
    "Win32_System_Console",
]

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true  # Automatically strip symbols from the binary.
#opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
incremental = false
debug = false
rpath = false
overflow-checks = true

[package.metadata.windows]
subsystem = "windows"

[target.x86_64-pc-windows-msvc]
#rustflags = ["-C", "target-feature=+crt-static"]
